0.2.9   xx-xxx-2010
  o Add Danish, Brazilian Portguese and Vietnamese translations.


0.2.8   11-Apr-2010
  o Stop using our custom dock icon implementation on OS X and just use
    QSystemTrayIcon everywhere. Fixes the build on Snow Leopard.
    (Ticket #562)
  o Update the bundled CA certificates to re-enable downloading bridges
    from bridges.torproject.org via SSL.
  o Include a pre-configured qt.conf file in the Mac OS X bundles that
    disable Qt plugin loading from the default directories. Otherwise,
    users who have Qt installed in a system-wide location would end up
    loading the libraries twice and crashing.
  o Include libgcc_s_dw2-1.dll in the Windows installers, since Qt 4.6 now
    depends on that DLL. Including the .dll is currently hardcoded, so the
    Windows installer must be built using Qt 4.6. (Ticket #555)
  o Update the included version of miniupnpc to 1.4.20100407.
  o Add Burmese and Thai UI translations.


0.2.7   25-Jan-2010
  o Remove the explicit palette set for the configuration dialog that
    prevented the dialog from inheriting colors from the user's current
    system theme. (Ticket #485. Patch from mkirk.)
  o Correct the path to the badge pixmap used in time skew warning
    messages. (Ticket #537. Patch from mkirk.)
  o Fix compilation on Debian GNU/kFreeBSD. Patch from dererk.
  o Clean up a couple status event messages related to dangerous port
    warnings.
  o Change the vidalia_ru.nsh output encoding from KOI8-R to Windows-1251. 
    (Ticket #527)
  o Add an option for building an OS X 10.4 compatible binary.


0.2.6   02-Nov-2009
  o Remove the erroneous comma in the default vidalia.conf in the
    Mac OS X drag-and-drop bundle, since we now dump whatever the
    user types into a QString rather than parsing it into a
    QStringList.
  o Updated the Arabic, Russian and Slovenian translations.


0.2.5   14-Oct-2009
  o Add support in the Network settings page for configuring the