@@ -1,5 +1,6 @@
 0.2.9   xx-xxx-2010
   o Add Danish, Brazilian Portguese and Vietnamese translations.
+  o Update the bundled version of miniupnpc to 1.4.20100418.
 
 
 0.2.8   11-Apr-2010
